# gossip-slint

./: Cargo.toml  build.rs
src/: about.rs  main.rs
src/app/: facade.rs  mod.rs  notedata.rs
src/app/welcome/: mod.rs
ui/: AppPage.slint  Facade.slint  Welcome.slint  appwindow.slint
ui/gossip/: button.slint  fonts.slint  link.slint  palette.slint  style.slint  text.slint
ui/main/: Feed.slint  Main.slint  MainPage.slint  UiTest.slint
ui/types/: UiContentSegment.slint  UiNoteData.slint  UiSignerInfo.slint
ui/widgets/: Note.slint  Text.slint  TextSegment.slint  button.slint
